Fix username overflow on infobar

--- a/frontend/src/chat/infobar/infobar.scss
+++ b/frontend/src/chat/infobar/infobar.scss
@@ -24,7 +24,7 @@
 
         .menu-item {
             display: flex;
-            padding: 8px 16px;
+            padding: 8px 32px 8px 12px;
             cursor: pointer;
 
             &:hover {
@@ -33,6 +33,9 @@
 
             li {
                 flex: 1 1 80%;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
             }
 
             button {
